--- a/ManagerM/Icons.qrc
+++ b/ManagerM/Icons.qrc
@@ -48,5 +48,11 @@
         <file>Iconos/Windows_Mobility_Center.png</file>
         <file>Iconos/YouTube_alt_1.png</file>
         <file>Iconos/Zoom_Out.png</file>
+        <file>Iconos/322901_tekstura_kvadraty_cveta_2560x1600_(www.GdeFon.ru).jpg</file>
+        <file>Iconos/cuadrados-azules.jpg</file>
+        <file>Iconos/villabg.jpg</file>
+        <file>Iconos/vladstudio_squares2_1280x10241.jpg</file>
+        <file>Iconos/i27VnaRZiVM5i.jpg</file>
+        <file>Iconos/windows8_metro_green_1920_1080.jpg</file>
     </qresource>
 </RCC>
