--- a/ManagerM/Icons.qrc
+++ b/ManagerM/Icons.qrc
@@ -54,5 +54,8 @@
         <file>Iconos/vladstudio_squares2_1280x10241.jpg</file>
         <file>Iconos/i27VnaRZiVM5i.jpg</file>
         <file>Iconos/windows8_metro_green_1920_1080.jpg</file>
+        <file>Iconos/save.png</file>
+        <file>Iconos/sq_plus.png</file>
+        <file>Iconos/trash.png</file>
     </qresource>
 </RCC>
