--- a/ManagerM/ui_colaborador.ui
+++ b/ManagerM/ui_colaborador.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ui_colaborador</class>
  <widget class="QWidget" name="ui_colaborador">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
