--- a/ManagerM/ui_tree_ventas.ui
+++ b/ManagerM/ui_tree_ventas.ui
@@ -21,7 +21,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
-    <widget class="QTreeWidget" name="treeWidget">
+    <widget class="QTreeWidget" name="treeWidget_ventas">
      <column>
       <property name="text">
        <string>Ventas</string>
