--- a/ManagerM/Icons.qrc
+++ b/ManagerM/Icons.qrc
@@ -72,5 +72,7 @@
         <file>Iconos/Stack.png</file>
         <file>Iconos/Home.png</file>
         <file>Iconos/JAVA.png</file>
+        <file>Iconos/40406.png</file>
+        <file>Iconos/Project_15.png</file>
     </qresource>
 </RCC>
