--- a/ManagerM/Icons.qrc
+++ b/ManagerM/Icons.qrc
@@ -64,5 +64,15 @@
         <file>Iconos/doc_edit.png</file>
         <file>Iconos/Black_New-Page.png</file>
         <file>Iconos/monotone_search_zoom.png</file>
+        <file>Iconos/People-MSN.png</file>
+        <file>Iconos/Gear.png</file>
+        <file>Iconos/Control Panel.png</file>
+        <file>Iconos/16.png</file>
+        <file>Iconos/Account and Control.png</file>
+        <file>Iconos/Stack.png</file>
+        <file>Iconos/Home.png</file>
+        <file>Iconos/JAVA.png</file>
+        <file>Iconos/40406.png</file>
+        <file>Iconos/Project_15.png</file>
     </qresource>
 </RCC>
