--- a/ManagerM/ui_module_articulos.ui
+++ b/ManagerM/ui_module_articulos.ui
@@ -264,6 +264,9 @@
        </item>
        <item>
         <widget class="QTableView" name="tableView_articulos">
+         <property name="editTriggers">
+          <set>QAbstractItemView::NoEditTriggers</set>
+         </property>
          <property name="alternatingRowColors">
           <bool>true</bool>
          </property>
