--- a/ManagerM/ui_opciones_articulo.ui
+++ b/ManagerM/ui_opciones_articulo.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ui_opciones_articulo</class>
  <widget class="QWidget" name="ui_opciones_articulo">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -44,7 +47,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
