--- a/ManagerM/ui_new_articulo.ui
+++ b/ManagerM/ui_new_articulo.ui
@@ -275,6 +275,11 @@
          <string>Precio</string>
         </property>
        </column>
+       <column>
+        <property name="text">
+         <string>Proveedor</string>
+        </property>
+       </column>
       </widget>
      </item>
      <item>
