--- a/ManagerM/ui_new_venta.ui
+++ b/ManagerM/ui_new_venta.ui
@@ -172,7 +172,7 @@
         <enum>QFrame::Plain</enum>
        </property>
        <property name="currentIndex">
-        <number>0</number>
+        <number>2</number>
        </property>
        <widget class="QWidget" name="page">
         <layout class="QGridLayout" name="gridLayout">
@@ -736,7 +736,7 @@
           </layout>
          </item>
          <item row="4" column="0">
-          <widget class="QWidget" name="widget" native="true">
+          <widget class="QWidget" name="widget_venta" native="true">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
